--- a/Views/Message.xaml
+++ b/Views/Message.xaml
@@ -3,8 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfImportExport.Views"
-      mc:Ignorable="d" 
+      xmlns:local="clr-namespace:WpfImportExport.Views" xmlns:viewmodels="clr-namespace:WpfImportExport.ViewModels"
+       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Message">
 
@@ -17,6 +17,7 @@
             Margin="2" 
             ScrollViewer.HorizontalScrollBarVisibility="Auto" 
             HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-            MinHeight="100"/>
+            MinHeight="100"
+            ItemsSource="{Binding TraceMessages}"/>
     </Grid>
 </Page>
