--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfImportExport"
         mc:Ignorable="d"
-        Title="TIA Portal V18 Import/Export" Height="450" Width="800"
-        WindowStartupLocation="CenterScreen">
+        Title="TIA Portal V18 Import/Export" MinHeight="450" MinWidth="800"
+        WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
@@ -24,6 +24,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Frame 
             Grid.Row="0" Grid.Column="0"
@@ -33,12 +34,14 @@
         </Frame>
         <Frame 
             Grid.Row="1" Grid.Column="0"
+            Grid.ColumnSpan="2"
             x:Name="exportarBloco" 
             NavigationUIVisibility="Hidden">
 
         </Frame>
         <Frame 
             Grid.Row="2" Grid.Column="0"
+            Grid.ColumnSpan="2"
             x:Name="message" 
             NavigationUIVisibility="Hidden">
 
