Adiciona suporte a importação e exportação de blocos
- Adicionada nova linha de `RowDefinition` no `Grid` em `MainWindow.xaml` para acomodar o novo `Frame` chamado `message`.
- Ajustada a propriedade `Grid.ColumnSpan` do `Frame` `exportarBloco` de `2` para `1` em `MainWindow.xaml`.
- Adicionados novos `Frames` chamados `importarBloco` e `message` em `MainWindow.xaml`.
- Adicionada referência ao namespace `WpfImportExport.ViewModels` em `MainWindow.xaml.cs`.
- Removida a região de campos e adicionada a inicialização do `ProjetoViewModel` em `MainWindow.xaml.cs`.
- Adicionado novo construtor em `MainWindow.xaml.cs` que aceita um `ProjetoViewModel` como parâmetro.
- Alterada a visibilidade da classe `Projeto` de `internal` para `public` em `Projeto.cs`.
- Adicionada a propriedade `ImportFilePath` em `Projeto.cs`.
- Reintroduzido o método `ListarBlocos` em `Projeto.cs`.
- Adicionados métodos `ExportarBlocos`, `ProcurarArquivoImportar` e `ImportarBlocos` em `Projeto.cs`.
- Alterada a visibilidade da classe `SiemensApiWrapper` de `internal` para `public` em `SiemensApiWrapper.cs`.
- Modificado o método `ExportRegularBlock` para aceitar um `PlcBlock` em vez de `PlcSoftware` e `nameBlock` em `SiemensApiWrapper.cs`.
- Adicionado o método `ImportBlocks` em `SiemensApiWrapper.cs`.
- Alterada a classe `MainViewModel` de `public` para `public static` e ajustada a inicialização do `ProjetoViewModel` em `MainViewModel.cs`.
- Alterada a visibilidade da classe `ProjetoViewModel` de `internal` para `public` em `ProjetoViewModel.cs`.
- Adicionada a propriedade `BlocoSelecionado` em `ProjetoViewModel.cs`.
- Adicionados novos comandos `cBlockExport`, `cBlockImport` e `cProcurarArquivoImportar` em `ProjetoViewModel.cs`.
- Adicionados métodos `ProcurarArquivoImportar`, `BlockExport` e `BlockImport` em `ProjetoViewModel.cs`.
- Ajustada a interface de `ExportarBloco.xaml` para incluir um novo `RowDefinition` e mover os elementos existentes para novas posições.
- Adicionado o comando `cBlock

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,7 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -30,17 +31,24 @@
             Grid.Row="0" Grid.Column="0"
             x:Name="abrirProjeto" 
             NavigationUIVisibility="Hidden">
-
+            
         </Frame>
         <Frame 
             Grid.Row="1" Grid.Column="0"
-            Grid.ColumnSpan="2"
+            Grid.ColumnSpan="1"
             x:Name="exportarBloco" 
             NavigationUIVisibility="Hidden">
 
         </Frame>
         <Frame 
             Grid.Row="2" Grid.Column="0"
+            Grid.ColumnSpan="2"
+            x:Name="importarBloco" 
+            NavigationUIVisibility="Hidden">
+
+        </Frame>
+        <Frame 
+            Grid.Row="3" Grid.Column="0"
             Grid.ColumnSpan="2"
             x:Name="message" 
             NavigationUIVisibility="Hidden">
