--- a/Views/ImportarBloco.xaml
+++ b/Views/ImportarBloco.xaml
@@ -1,16 +1,15 @@
-﻿<Page x:Class="WpfImportExport.Views.ExportarBloco"
+﻿<Page x:Class="WpfImportExport.Views.ImportarBloco"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:viewmodels="clr-namespace:WpfImportExport.ViewModels" 
+      xmlns:local="clr-namespace:WpfImportExport.Views"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ExportarBloco">
+      Title="ImportarBloco">
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
             <RowDefinition Height="35"/>
             <RowDefinition Height="35"/>
             <RowDefinition Height="35"/>
@@ -20,16 +19,16 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Label 
-            Grid.Row="1" Grid.Column="0" 
-            Content="Caminho para Exportar" 
+            Grid.Row="0" Grid.Column="0" 
+            Content="Arquivo para importar" 
             VerticalAlignment="Bottom" HorizontalAlignment="Left"/>
         <TextBox 
             x:Name="tbPathExport" 
-            Grid.Row="2" Grid.Column="0" 
+            Grid.Row="1" Grid.Column="0" 
             Padding="1" 
             VerticalContentAlignment="Center"
             IsReadOnly="True"
-            Text="{Binding Projeto.ExportPath, Mode=OneWay}"/>
+            Text="{Binding Projeto.ImportFilePath, Mode=OneWay}"/>
         <WrapPanel Grid.Row="3" Grid.Column="0">
             <Button 
                 x:Name="btnBrowsePath" 
@@ -37,20 +36,14 @@
                 Margin="2" 
                 Width="120" Height="30" 
                 VerticalAlignment="Center" HorizontalAlignment="Left"
-                Command="{Binding cProcurarCaminhoExport}"/>
+                Command="{Binding cProcurarArquivoImportar}"/>
             <Button 
-                x:Name="btnExport" 
-                Content="Exportar" 
+                x:Name="btnImport" 
+                Content="Importar" 
                 Margin="10,0" 
                 Width="120" Height="30" 
                 VerticalAlignment="Center" HorizontalAlignment="Left"
-                Command="{Binding cBlockExport}"/>
+                Command="{Binding cBlockImport}"/>
         </WrapPanel>
-        <ListBox 
-            x:Name="lbBlocos" 
-            Grid.Row="0" Grid.Column="0"
-            ItemsSource="{Binding Blocos}"
-            DisplayMemberPath="Name"
-            SelectedItem="{Binding BlocoSelecionado, Mode=TwoWay}"/>
     </Grid>
 </Page>
