--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,54 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfImportExport"
         mc:Ignorable="d"
-        Title="TIA Portal V18 Import/Export" MinHeight="450" MinWidth="800"
-        WindowStartupLocation="CenterScreen" WindowState="Maximized">
+        Title="TIA Portal V18 Import/Export" MinHeight="600" MinWidth="700"
+        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" WindowStyle="ThreeDBorderWindow">
     <Window.Background>
-        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="Black" Offset="0"/>
-            <GradientStop Color="White" Offset="1"/>
-            <GradientStop Color="#FFCFCFCF" Offset="0"/>
-            <GradientStop Color="#e6e0e0e0" Offset="0.5"/>
-        </LinearGradientBrush>
+        <SolidColorBrush Color="White"/>
     </Window.Background>
 
-    <Grid Margin="5,5,5,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Frame 
-            Grid.Row="0" Grid.Column="0"
-            x:Name="abrirProjeto" 
-            NavigationUIVisibility="Hidden">
-            
-        </Frame>
-        <Frame 
-            Grid.Row="1" Grid.Column="0"
-            Grid.ColumnSpan="1"
-            x:Name="exportarBloco" 
-            NavigationUIVisibility="Hidden">
-
-        </Frame>
-        <Frame 
-            Grid.Row="2" Grid.Column="0"
-            Grid.ColumnSpan="2"
-            x:Name="importarBloco" 
-            NavigationUIVisibility="Hidden">
-
-        </Frame>
-        <Frame 
-            Grid.Row="3" Grid.Column="0"
-            Grid.ColumnSpan="2"
-            x:Name="message" 
-            NavigationUIVisibility="Hidden">
-
-        </Frame>
+    <Grid>
+        <Frame x:Name="MainContent"/>
     </Grid>
 </Window>
