--- a/Views/AbrirProjeto.xaml
+++ b/Views/AbrirProjeto.xaml
@@ -6,17 +6,19 @@
       xmlns:local="clr-namespace:WpfImportExport.Views"
       xmlns:viewmodels="clr-namespace:WpfImportExport.ViewModels"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="333"
       Title="AbrirProjeto">
-    <Grid>
+    <Page.Background>
+        <SolidColorBrush Color="#F2F2F2"/>
+    </Page.Background>
+    <Grid HorizontalAlignment="Center" Margin="2">
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="35"/>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="500"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
         </Grid.ColumnDefinitions>
 
         <Label 
@@ -31,7 +33,7 @@
             IsReadOnly="True"
             Text="{Binding Projeto.ProjectPath, Mode=OneWay}"
             />
-        <WrapPanel Grid.Row="3" Grid.Column="0">
+        <WrapPanel Grid.Row="3" Grid.Column="0" Margin="0,10,0,0">
             <Button 
                 x:Name="btnBrowseProject"   
                 Content="Procurar Arquivo" 
