--- a/Views/ImportarBloco.xaml
+++ b/Views/ImportarBloco.xaml
@@ -5,18 +5,19 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfImportExport.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="333"
       Title="ImportarBloco">
-
-    <Grid>
+    <Page.Background>
+        <SolidColorBrush Color="#F2F2F2"/>
+    </Page.Background>
+    <Grid HorizontalAlignment="Center" Margin="2">
         <Grid.RowDefinitions>
             <RowDefinition Height="35"/>
             <RowDefinition Height="35"/>
             <RowDefinition Height="35"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="500"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300"/>
         </Grid.ColumnDefinitions>
         <Label 
             Grid.Row="0" Grid.Column="0" 
